--- a/iOSControl.plist
+++ b/iOSControl.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://</string>
+					<string>http://www.3p4c.com/i2-resigned.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
